[FIX]#60964 GDPR - Data Privacy - History; Styles changes.

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
@@ -1121,6 +1121,7 @@ table th.thpointer {
 .w20 { width: 20% }
 .w30 { width: 30% }
 .w40 { width: 40% }
+.w50 { width: 50% }
 
 .tableform {
     width: 100%;
