[UPD] UK AdditionalPaymentsDeduction for test e-form

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/FormLibContent/Areas/UnitedKingdom/Views/AdditionalPaymentsDeduction/_TabServiceRequestDetails.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/FormLibContent/Areas/UnitedKingdom/Views/AdditionalPaymentsDeduction/_TabServiceRequestDetails.cshtml
@@ -12,32 +12,32 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="tdstrong">@Model.Label("Co-WorkerGlobalviewID")</td>
+                    <td class="tdstrong">@Model.Label("EmployeeNumber")</td>
                     <td>
-                        @Model.Element("Co-WorkerGlobalviewID", false)
+                        @Model.Element("EmployeeNumber", false)
                     </td>
                 </tr>
                 <tr>
-                    <td class="tdstrong">@Model.Label("FirstName")</td>
+                    <td class="tdstrong">@Model.Label("EmployeeFirstName")</td>
                     <td>
-                        @Model.Element("FirstName", false)
+                        @Model.Element("EmployeeFirstName", false)
                     </td>
                 </tr>
                 <tr>
-                    <td class="tdstrong">@Model.Label("LastName")</td>
+                    <td class="tdstrong">@Model.Label("EmployeeLastName")</td>
                     <td>
-                        @Model.Element("LastName", false)</td>
+                        @Model.Element("EmployeeLastName", false)</td>
                 </tr>
                 <tr>
-                    <td class="tdstrong">@Model.Label("IKEAEmailAddress")</td>
+                    <td class="tdstrong">@Model.Label("IKEAEmailAddress1")</td>
                     <td>
-                        @Model.Element("IKEAEmailAddress", false)
+                        @Model.Element("IKEAEmailAddress1", false)
                     </td>
                 </tr>
                 <tr>
-                    <td class="tdstrong">@Model.Label("IKEANetworkID")</td>
+                    <td class="tdstrong">@Model.Label("IKEANetworkID1")</td>
                     <td>
-                        @Model.Element("IKEANetworkID", false)
+                        @Model.Element("IKEANetworkID1", false)
                     </td>
                 </tr>
                 <tr>
