--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseTemplateTree.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseTemplateTree.cshtml
@@ -10,15 +10,24 @@
     }
 }
 
-<div id="divCaseTemplate" class="btn-group">
+<div id="divCaseTemplate" class="btn-group DynamicDropDown">
     @if (Model.CaseTemplateCategoryTree != null && Model.CaseTemplateCategoryTree.Count > 0)
     {
         <button class="btn dropdown-toggle" data-toggle="dropdown" id="btnCaseTemplateTree" >
              @Translation.Get("Ärendemall")
             <span class="caret"> </span>
         </button>
-        <ul class="dropdown-menu">
+        <ul class="dropdown-menu parentddMenu subddMenu" style="z-index: 99999999999; max-height: 704px;">
             @Html.CaseSolutionDropdownButtonString(Model.CaseTemplateCategoryTree, Model.CustomerId, isJS)
         </ul>    
     }
 </div>
+
+<script type="text/javascript">
+    $(function() {
+        $('#divCaseTemplate .dropdown-submenu.DynamicDropDown_Up').off('mousemove');
+        $('#divCaseTemplate .dropdown-submenu.DynamicDropDown_Up').on('mousemove', function (event) {
+            dynamicDropDownBehaviorOnMouseMove(event);
+        });
+    })
+</script>
