--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/ModalDialogs/_CaseAttachExistFile.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/ModalDialogs/_CaseAttachExistFile.cshtml
@@ -11,9 +11,8 @@
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                 <h5>@Translation.GetCoreTextTranslation("Bifogade filer")</h5>
             </div>
-            <div class="modal-body max-height-600">
-                <div>
-                    <table class="table-striped table-bordered table-hover" style="width: 100%" id="table_attached_files">
+            <div class="">
+                <table class="table-striped table-bordered table-hover" style="width: 100%" id="table_attached_files">
                         @foreach (var file in Model.CaseAttachedExFiles)
                         {
                             <tr>
@@ -22,16 +21,15 @@
                                         <input type="hidden" id="isCaseFile" value="@file.IsCaseFile.ToString()"/>
                                         @if (!file.IsCaseFile)
                                         {
-                                            <input type="hidden" id="file_logId" value="@file.LogId"/>
+                                            <input type="hidden" id="file_logId" value="@file.LogId" />
                                         }
-                                        <input type="checkbox" value="@file.Id"/>
+                                        <input type="checkbox" value="@file.Id" />
                                         <span class="lbl">@file.FileName</span>
                                     </div>
                                 </td>
                             </tr>
                         }
-                    </table>
-                </div>
+                </table>
             </div>
             <div class="modal-footer-right">
                 <button type="button" id="btnAttach" class="btn btn-ok btn-default" data-dismiss="modal">@Translation.GetCoreTextTranslation("Bifoga")</button>
