--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/_CaseDocumentPrint.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/_CaseDocumentPrint.cshtml
@@ -13,16 +13,15 @@
     <div class="page-holder">
         @if (Model.CaseDocumentParagraphs != null)
         {
-            foreach (var item in Model.CaseDocumentParagraphs.OrderBy(x => x.SortOrder))
+            foreach (var par in Model.CaseDocumentParagraphs)
             {
-                if (item.CaseDocumentParagraph.CaseDocumentTexts != null)
+                if (par.CaseDocumentTexts != null)
                 {
-                    //TODO: OrderBy
                     //Check ParagraphType
-                    if (item.CaseDocumentParagraph.ParagraphType == (int)CaseDocumentParagraphType.Text)
+                    if (par.ParagraphType == (int)CaseDocumentParagraphType.Text)
                     {
                         <p>
-                            @foreach (var paragraphText in item.CaseDocumentParagraph.CaseDocumentTexts.OrderBy(x => x.SortOrder))
+                            @foreach (var paragraphText in par.CaseDocumentTexts.OrderBy(x => x.SortOrder))
                             {
                                 if (!string.IsNullOrEmpty(paragraphText.Text))
                                 {
@@ -31,12 +30,12 @@
                             }
                         </p>
                     }
-                    if (item.CaseDocumentParagraph.ParagraphType == (int)CaseDocumentParagraphType.TableNumeric)
+                    if (par.ParagraphType == (int)CaseDocumentParagraphType.TableNumeric)
                     {
                         int nr = 1;
 
                         <table class="table-full-width table-numeric">
-                            @foreach (var paragraphText in item.CaseDocumentParagraph.CaseDocumentTexts.OrderBy(x => x.SortOrder))
+                            @foreach (var paragraphText in par.CaseDocumentTexts.OrderBy(x => x.SortOrder))
                             {
                                 //Dont list empty
                                 if (!string.IsNullOrEmpty(paragraphText.Text))
@@ -53,9 +52,9 @@
 
                     }
 
-                    if (item.CaseDocumentParagraph.ParagraphType == (int)CaseDocumentParagraphType.Logo)
+                    if (par.ParagraphType == (int)CaseDocumentParagraphType.Logo)
                     {
-                        foreach (var paragraphText in item.CaseDocumentParagraph.CaseDocumentTexts.OrderBy(x => x.SortOrder))
+                        foreach (var paragraphText in par.CaseDocumentTexts.OrderBy(x => x.SortOrder))
                         {
                             if (!string.IsNullOrEmpty(paragraphText.Text))
                             {
@@ -64,10 +63,10 @@
                         }
                     }
 
-                    if (item.CaseDocumentParagraph.ParagraphType == (int)CaseDocumentParagraphType.TableTwoColumns)
+                    if (par.ParagraphType == (int)CaseDocumentParagraphType.TableTwoColumns)
                     {
                         <table class="table-full-width table-two-colums">
-                            @foreach (var paragraphText in item.CaseDocumentParagraph.CaseDocumentTexts.OrderBy(x => x.SortOrder))
+                            @foreach (var paragraphText in par.CaseDocumentTexts.OrderBy(x => x.SortOrder))
                             {
                                 //Dont list empty
                                 if (!string.IsNullOrEmpty(paragraphText.Text))
