--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/ComputerType/New.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/ComputerType/New.cshtml
@@ -23,15 +23,11 @@
 {
     <h4>@Translation.Get("Allmänt")</h4>
     <div class="row">
-    <div class="span3">
-        @Translation.Get("Datortyp")
-    </div>
-    <div class="span9">
-    @using (Html.BeginForm("New", "ComputerType", FormMethod.Post, new { id = "computerModule_edit_form" }))
-    {
-        @Html.EditorFor(m => m.Name)
-        @Html.ValidationMessageFor(m => m.Name)
-    }
-    </div>
+        <div class="span12">
+            @using (Html.BeginForm("New", "ComputerType", FormMethod.Post, new { id = "computerModule_edit_form" }))
+            {
+                @Html.Partial("_Input", Model)
+            }
+        </div>
     </div>
 }
