[FIX]#61440 - Dynamic documents are not generating

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/_CaseDocumentPrint.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/_CaseDocumentPrint.cshtml
@@ -13,7 +13,7 @@
     <div class="page-holder">
         @if (Model.CaseDocumentParagraphs != null)
         {
-            foreach (var par in Model.CaseDocumentParagraphs)
+            foreach (var par in Model.CaseDocumentParagraphs.OrderBy(x => x.SortOrder))
             {
                 if (par.CaseDocumentTexts != null)
                 {
