[FIX]#61026 - Self Service, adjustment for mobile devices.

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/NewCase.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/NewCase.cshtml
@@ -42,6 +42,10 @@
 
 </script>
 
+@section Styles {
+    <link href="@Url.Content("~/Content/css/case-mobile.css")" rel="stylesheet" type="text/css" />
+}
+
 @*<script src="~/Content/js/Case/edit.js"></script>*@
 @Scripts.Render("~/Content/js/Case/edit")
 
