[ADD]#60974 - Inventory  - SyncChangedDate.

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/CustomInventory/Edit.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/CustomInventory/Edit.cshtml
@@ -70,6 +70,14 @@
                             @Html.DisplayFor(m => m.InventoryViewModel.ChangeDate, "Date")
                         </td>
                     </tr>
+                    <tr>
+                        <td class="span3">
+                            <label>@Translation.GetCoreTextTranslation("Synkroniseringsdatum")</label>
+                        </td>
+                        <td class="span9">
+                            @Html.DisplayFor(m => m.InventoryViewModel.SyncDate, "Date")
+                        </td>
+                    </tr>
                 </table>
             </div>
         </div>
