--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/InventorySettings/EditorTemplates/Settings/PrinterFieldsSettingsViewModel.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/InventorySettings/EditorTemplates/Settings/PrinterFieldsSettingsViewModel.cshtml
@@ -102,5 +102,8 @@
         <tr>
             @Html.EditorFor(m => m.StateFieldsSettingsModel.ChangedDateFieldSettingModel, "Settings/FieldSettingModel")
         </tr>
+        <tr>
+            @Html.EditorFor(m => m.StateFieldsSettingsModel.SyncDateFieldSettingModel, "Settings/FieldSettingModel")
+        </tr>
     </tbody>
 </table>
