--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Server/Edit.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Server/Edit.cshtml
@@ -3,6 +3,7 @@
 
 @{
     Layout = "~/Areas/Inventory/Views/Server/_EditServerLayout.cshtml";
+    var syncChangeFieldModel = Model.ServerViewModel.StateFieldsModel.SyncChangeDate;
 }           
 
 @section Actions
@@ -51,10 +52,10 @@
     @Html.EditorFor(m => m.ServerViewModel.CommunicationFieldsViewModel)
     @Html.EditorFor(m => m.ServerViewModel.OtherFieldsModel)
     @Html.EditorFor(m => m.ServerViewModel.PlaceFieldsViewModel)
-    @Html.EditorFor(m => m.ServerViewModel.StateFieldsModel)
-    if (Model.ServerViewModel.CreatedDate.Show || Model.ServerViewModel.ChangedDate.Show)
+
+    if (Model.ServerViewModel.CreatedDate.Show || Model.ServerViewModel.ChangedDate.Show || syncChangeFieldModel.Show)
     {
-    <h4>@Translation.GetCoreTextTranslation("Status")</h4>
+        <h4>@Translation.GetCoreTextTranslation("Status")</h4>
     }
     <div class="row">
         <div class="span12">
@@ -82,15 +83,26 @@
                     </tr>
                     if (Model.ServerViewModel.StateFieldsModel.ChangedByUserName != null)
                     {
+                        <tr>
+                            <td class="span3">
+                                <label>@Translation.GetCoreTextTranslation("Changed by")</label>
+                            </td>
+                            <td class="span9">
+                                @Html.DisplayFor(m => m.ServerViewModel.StateFieldsModel.ChangedByUserName.FirstName) @Html.DisplayFor(m => m.ServerViewModel.StateFieldsModel.ChangedByUserName.LastName)
+                            </td>
+                        </tr>
+                    }
+                }
+                @if (syncChangeFieldModel.Show)
+                {
                     <tr>
                         <td class="span3">
-                            <label>@Translation.GetCoreTextTranslation("Changed by")</label>
+                            <label>@Translation.Get(syncChangeFieldModel.Caption)</label>
                         </td>
                         <td class="span9">
-                            @Html.DisplayFor(m => m.ServerViewModel.StateFieldsModel.ChangedByUserName.FirstName) @Html.DisplayFor(m => m.ServerViewModel.StateFieldsModel.ChangedByUserName.LastName)
+                            @Html.DisplayFor(m => syncChangeFieldModel.Value, "Date")
                         </td>
                     </tr>
-                    }
                 }
             </table>
         </div>
